TKWAR-54 - Completed unit testing for Shapes except Circle and fixed relevand classes, broken LeafQuadtree that now doesn't work correctly